tests/vrs/interface/parts/registerfield_02_field_info_wrong_2_expected.txt
error: expected `integer literal`, found `base`
     --> tests/vrs/interface/parts/registerfield_02_field_info_wrong_2.vrs:1:11
      |
    1 |  reg foo [ base, 8 ] {Layout {}}
      |            ^^^^ help: add `integer literal` here.
